--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   box-sizing: border-box;
 }
 
+
 html,
 body {
   background: var(--bg);
@@ -28,7 +29,8 @@ body {
 
 #root {
   padding: var(--offset);
-  background: var(--bg);
+  padding-top: 0;
+  /* background: var(--bg); */
   color: var(--text);
   line-height: 1.6;
   max-width: calc(100dvw);
