--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -482,32 +482,63 @@ body:has(div.event-modal) {
 
 .profile-menu {
     position: absolute;
-    top: 3rem;
+    top: 2.5rem;
     right: 0;
     border: 1px solid rgb(128 128 128 /0.25);
-    padding: 4px;
-    height: fit-content;
-    border-radius: 14px;
+    padding: 0.25rem;
+    border-radius: 0.75rem;
     z-index: 12;
-    background: var(--bg);
+    background: var(--btn-fill-accent-inactive);
+
+    &::after {
+        position: absolute;
+        inset: 0;
+        background: var(--bg);
+        opacity: 0.7;
+        content: '';
+        border-radius: 0.75rem;
+        z-index: 12;
+
+    }
 
     ul {
         list-style: none;
         display: flex;
         flex-direction: column;
-        gap: 8px;
+        width: max-content;
+        position: relative;
+        z-index: 13;
+        gap: 0.125rem;
 
         li {
-            padding: 4px 8px;
-            min-width: 10ch;
-            border-radius: 11px;
-            font-size: 0.72rem;
+            padding: 0.25rem 0.75rem;
+            width: 100%;
+            font-size: 0.85rem;
             transition: all 75ms;
             cursor: pointer;
+            border-radius: 0.25rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 1rem;
+            height: 2.5rem;
+            transition: all 75ms;
+            outline: none;
 
             &:hover,
-            &:active {
-                background: light-dark(rgb(233, 233, 233), rgb(15, 15, 15));
+            &:active,
+            &:focus {
+                background: var(--btn-fill-accent-active);
+                color: var(--bg);
+            }
+
+
+            &:first-of-type {
+                border-radius: 0.5rem 0.5rem 0.25rem 0.25rem;
+            }
+
+            &:last-of-type {
+                border-radius: 0.25rem 0.25rem 0.5rem 0.5rem;
             }
         }
     }
