--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -26,7 +26,7 @@ form.addNewEvent {
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
-    background: light-dark(rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0.75));
+    background: var(--bg);
     backdrop-filter: blur(20px);
     border: 1px solid rgb(128 128 128 /0.25);
     width: min(400px, 92dvw);
